correction on footer and dark mode skill-sm

--- a/style.css
+++ b/style.css
@@ -463,10 +463,10 @@ input.form-control.fc {
 }
 
 footer ul li {
-  font-size: 1.2rem;
+  font-size: 1rem;
   margin-bottom: 10px;
 }
 footer ul a .fab {
-  font-size: 1.5rem !important;
+  font-size: 1.2rem !important;
   margin-left: 10px;
 }
